# chat_bingo

./: .editorconfig  .gitignore  README.md  justfile
backend/: .dockerignore  Cargo.toml  Dockerfile  build.rs
backend/migrations/: 20240214040827_setup.sql
backend/prometheus/: prometheus.yml
backend/src/: app_info.rs  auth.rs  cli.rs  doc.rs  event.rs  lib.rs  main.rs  utils.rs
backend/src/auth/: error.rs  jwt.rs  middleware.rs  mod.rs  twitch.rs
backend/src/event/: mod.rs
backend/src/game/: create.rs  get.rs  manager.rs  mod.rs  playerdata.rs  test.rs
backend/src/metrics/: middleware.rs  mod.rs
backend/src/rate_limiter/: dummy.rs  in_memory.rs  mod.rs
backend/src/user/: mod.rs
backend/src/websocket/: event_listener.rs  heartbeat.rs  mod.rs
blazor/: chat_bingo_frontend.sln
blazor/chat_bingo_frontend/: Program.cs
blazor/chat_bingo_frontend/Components/: App.razor  _Imports.razor
blazor/chat_bingo_frontend/Components/Layout/: NavMenu.razor
blazor/chat_bingo_frontend/Properties/: launchSettings.json
blazor_wasm/: bingo_frontend_wasm.sln
blazor_wasm/bingo_frontend_wasm/: Program.cs  _Imports.razor  bingo_frontend_wasm.csproj  libman.json
blazor_wasm/bingo_frontend_wasm/Components/: GameBoard.razor  Modal.razor  Modal.razor.css  Navbar.razor
blazor_wasm/bingo_frontend_wasm/Components/Common/: CreditFooter.razor  CreditFooter.razor.css  Navbar.razor  Navbar.razor.css
blazor_wasm/bingo_frontend_wasm/Components/Game/: BingoTile.razor  GameBoard.razor  GameBoard.razor.css  GameBoardGen.razor  GameBoardGen.razor.css  HostControls.razor
blazor_wasm/bingo_frontend_wasm/Components/Modal/: JoinInProgressModal.razor  JoinInProgressModal.razor.css  PlaceholderModal.razor
blazor_wasm/bingo_frontend_wasm/Layout/: MainLayout.razor  MainLayout.razor.css  NavMenu.razor
blazor_wasm/bingo_frontend_wasm/Pages/: API Test.razor  APITest.razor  CreditPage.razor  CreditPage.razor.css  HelpPage.razor  Home.razor  HostView.razor  LoginPage.razor  PlayerView.razor  UserSettings.razor
blazor_wasm/bingo_frontend_wasm/Properties/: launchSettings.json
blazor_wasm/bingo_frontend_wasm/Properties/PublishProfiles/: FolderProfile.pubxml
blazor_wasm/bingo_frontend_wasm/wwwroot/: index.html
blazor_wasm/bingo_frontend_wasm/wwwroot/assets/content/: FingerFamilyBingo.txt
blazor_wasm/bingo_frontend_wasm/wwwroot/css/: app.css
blazor_wasm/deploy/: DeployBlazor.sh  README.md
web/: .prettierrc  package-lock.json  package.json
web/src/: app.css
web/src/lib/bingo/: BingoCard.svelte  bingo_data.ts
web/src/routes/: +layout.svelte  +page.svelte
