[package]
name = "bingo_backend"
version = "0.0.1"
edition = "2021"
authors = [
    "Juliapixel <julia@juliapixel.com>",
    "VinFG1"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0" }
actix = "0.13"
actix-web-actors = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"
env_logger = "0.11"
tokio = { version = "1.36", features = ["full"] }
hashbrown = { version = "0.14.3", features = ["serde"] }
ulid = { version = "1.1.2", features = ["serde", "uuid"] }
parking_lot = "0.12.1"
either = { version = "1.10.0", features = ["serde"] }
