[package]
name = "bingo_backend"
version = "0.0.1"
edition = "2021"
authors = [
    "Juliapixel <julia@juliapixel.com>",
    "VinFG1 <vinfg1@gmail.com>"
]

[dependencies]
actix-web = { version = "4.0" }
actix = "0.13"
actix-web-actors = "4.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"
env_logger = "0.11"
tokio = { version = "1.36", features = ["full"] }
hashbrown = { version = "0.14", features = ["serde"] }
ulid = { version = "1.1", features = ["serde", "uuid"] }
parking_lot = { version = "0.12", features = ["serde"] }
either = { version = "1.10", features = ["serde"] }
mime = "0.3"
rand = "0.8"
sqlx = { version = "0.7", features = ["postgres", "chrono", "uuid", "runtime-tokio"] }
dotenvy = "0.15"
utoipa = { version = "4.2", features = ["actix_extras", "ulid", "rc_schema"], optional = true }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"], optional = true }
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
url = { version = "2.5", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots", "gzip", "brotli", "deflate", "hyper-rustls", "rustls-tls"] }
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
twitch_api = { version = "0.7.0-rc.7", features = ["reqwest", "helix", "serde_json", "twitch_oauth2"] }
time = { version = "0.3.34", features = ["serde"] }
uuid = { version = "1.7.0", features = ["serde"] }
base64 = "0.21.7"
once_cell = "1.19.0"
dashmap = "5.5.3"
prometheus = "0.13.3"

[build-dependencies]
vergen = {version = "8.3", features = ["git", "git2", "build"]}

[features]
swagger-ui = ["dep:utoipa", "dep:utoipa-swagger-ui"]
